Vectorized Turbo Evaluator cooking fast for pro - almost ready